<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/bandera_svg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/title_country_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bandera_svg"
        android:textAlignment="center"
        android:text="@string/chile"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@color/light_gray" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_country_name"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <TextView
                android:id="@+id/static_capital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capital"
                android:paddingEnd="5dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_capital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/static_capital"
                app:layout_constraintTop_toTopOf="@id/static_capital"
                app:layout_constraintBottom_toBottomOf="@id/static_capital"
                android:text="@string/santiago"/>

            <TextView
                android:id="@+id/static_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region"
                android:textSize="18sp"
                android:paddingEnd="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/static_capital"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/static_region"
                app:layout_constraintTop_toTopOf="@id/static_region"
                app:layout_constraintBottom_toBottomOf="@id/static_region"
                android:text="@string/santiago"/>

            <TextView
                android:id="@+id/static_subregion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subregion"
                android:textSize="18sp"
                android:paddingEnd="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/static_region"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_subregion"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/static_subregion"
                app:layout_constraintTop_toTopOf="@id/static_subregion"
                app:layout_constraintBottom_toBottomOf="@id/static_subregion"
                android:text="@string/santiago"/>

            <TextView
                android:id="@+id/static_population"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/population"
                android:paddingEnd="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/static_subregion"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_population"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/static_population"
                app:layout_constraintTop_toTopOf="@id/static_population"
                app:layout_constraintBottom_toBottomOf="@id/static_population"
                android:text="@string/santiago"/>

            <TextView
                android:id="@+id/static_gentilicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gentilicio"
                android:textSize="18sp"
                android:paddingEnd="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/static_population"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_gentilicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/static_gentilicio"
                app:layout_constraintTop_toTopOf="@id/static_gentilicio"
                app:layout_constraintBottom_toBottomOf="@id/static_gentilicio"
                android:text="@string/santiago"/>

            <TextView
                android:id="@+id/static_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textSize="18sp"
                android:paddingEnd="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/static_gentilicio"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/static_area"
                app:layout_constraintTop_toTopOf="@id/static_area"
                app:layout_constraintBottom_toBottomOf="@id/static_area"
                android:text="@string/santiago"/>

            <TextView
                android:id="@+id/static_gini"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/gini"
                android:paddingEnd="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/static_area"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_gini"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/static_gini"
                app:layout_constraintTop_toTopOf="@id/static_gini"
                app:layout_constraintBottom_toBottomOf="@id/static_gini"
                android:text="@string/no_hay_registros"/>

            <TextView
                android:id="@+id/static_vecinos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vecinos"
                android:textSize="18sp"
                android:paddingEnd="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/static_gini"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_vecinos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/static_vecinos"
                app:layout_constraintTop_toTopOf="@id/static_vecinos"
                app:layout_constraintBottom_toBottomOf="@id/static_vecinos"
                android:text="@string/santiago"/>

            <TextView
                android:id="@+id/static_idioma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/languages"
                android:paddingEnd="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/static_vecinos"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_idioma"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/static_idioma"
                app:layout_constraintTop_toTopOf="@id/static_idioma"
                app:layout_constraintBottom_toBottomOf="@id/static_idioma"
                android:text="@string/santiago"/>

            <TextView
                android:id="@+id/static_timezone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timezone"
                android:textSize="18sp"
                android:paddingEnd="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/static_idioma"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_timezone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/static_timezone"
                app:layout_constraintTop_toTopOf="@id/static_timezone"
                app:layout_constraintBottom_toBottomOf="@id/static_timezone"
                android:text="@string/santiago"/>

            <TextView
                android:id="@+id/static_domain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dominio_internet"
                android:textSize="18sp"
                android:paddingEnd="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/static_timezone"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_domain"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/static_domain"
                app:layout_constraintTop_toTopOf="@id/static_domain"
                app:layout_constraintBottom_toBottomOf="@id/static_domain"
                android:text="@string/santiago"/>

            <TextView
                android:id="@+id/static_prefijo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prefijo_celular"
                android:textSize="18sp"
                android:paddingEnd="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/static_domain"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_prefijo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/static_prefijo"
                app:layout_constraintTop_toTopOf="@id/static_prefijo"
                app:layout_constraintBottom_toBottomOf="@id/static_prefijo"
                android:text="@string/santiago"/>

            <TextView
                android:id="@+id/static_moneda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moneda"
                android:textSize="18sp"
                android:paddingEnd="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/static_prefijo"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_moneda"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/static_moneda"
                app:layout_constraintTop_toTopOf="@id/static_moneda"
                app:layout_constraintBottom_toBottomOf="@id/static_moneda"
                android:text="@string/santiago"/>

            <TextView
                android:id="@+id/static_alphacode"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alphacode"
                android:paddingEnd="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/static_moneda"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_alphacode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/static_alphacode"
                app:layout_constraintTop_toTopOf="@id/static_alphacode"
                app:layout_constraintBottom_toBottomOf="@id/static_alphacode"
                android:text="@string/santiago"/>







        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>